--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -2,16 +2,6 @@
 <html lang="en">
     <head>
 
-<script type="text/javascript"> 
-var totalCount = 8;
-function ChangeIt() 
-{
-var num = Math.ceil( Math.random() * totalCount );
-document.body.background = '{{STATIC_URL}}img/'+num+'.jpg';
-document.body.style.backgroundRepeat = "repeat";// Background repeat
-}
-</script>
-
 
 	     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
          <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/noti.css" />
@@ -32,7 +22,7 @@ document.body.style.backgroundRepeat = "repeat";// Background repeat
 			@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700);
             @import url(http://fonts.googleapis.com/css?family=Roboto);
 			body {
-				/*background: #563c55 url({{STATIC_URL}}img/6.jpg) no-repeat center top;*/
+				background: #563c55 url({{STATIC_URL}}img/7.jpg) no-repeat center top;
 				-webkit-background-size: cover;
 				-moz-background-size: cover;
 				background-size: cover;
