--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -40,6 +40,7 @@ font-size: 70px;
         0 16px 10px -8px rgba(0, 0, 0, 0.6);
     /*background-color: #000000;*/
     height: 10 auto;
+    opacity: 0.72;
 
 }
 
