--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -15,8 +15,8 @@
 
 
 {% for item in friends_top4 %}
-<div class="contenedor">
-<li><div class="profile_card">
+
+<div class="profile_card">
   <div class="header">
     <div class="inner_head">
       <a href="#"><span class="entypo-plus"></span><i>Agregar</i></a>
@@ -43,7 +43,6 @@
     </div>
 
   </div>
-</div></li>
 {% endfor %}
 
 
