--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -16,7 +16,7 @@
 
 {% for item in friends_top4 %}
 
-<div class="profile_card">
+<li><div class="profile_card">
   <div class="header">
     <div class="inner_head">
       <a href="#"><span class="entypo-plus"></span><i>Agregar</i></a>
@@ -43,7 +43,7 @@
     </div>
 
   </div>
-</div>
+</div></li>
 {% endfor %}
 
 
