--- a/skyfolk/static/css/colorbox.css
+++ b/skyfolk/static/css/colorbox.css
@@ -1,86 +1,182 @@
-/*
-    ColorBox Core Style:
-    The following CSS is consistent between example themes and should not be altered.
-*/
-#colorbox, #cboxOverlay, #cboxWrapper{position:absolute; top:0; left:0; z-index:9999; overflow:hidden;}
-#cboxOverlay{position:fixed; width:100%; height:100%;}
-#cboxMiddleLeft, #cboxBottomLeft{clear:left;}
-#cboxContent{position:relative;}
-#cboxLoadedContent{overflow:auto;}
-#cboxTitle{margin:0;}
-#cboxLoadingOverlay, #cboxLoadingGraphic{position:absolute; top:0; left:0; width:100%; height:100%;}
-#cboxPrevious, #cboxNext, #cboxClose, #cboxSlideshow{cursor:pointer;}
-.cboxPhoto{float:left; margin:auto; border:0; display:block; max-width:none;}
-.cboxIframe{width:100%; height:100%; display:block; border:0;}
-#colorbox, #cboxContent, #cboxLoadedContent{box-sizing:content-box;}
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
 
-/* 
-    User Style:
-    Change the following styles to modify the appearance of ColorBox.  They are
-    ordered & tabbed in a way that represents the nesting of the generated HTML.
-*/
-#cboxOverlay{background:url(images/overlay.png) repeat 0 0;}
-#colorbox{}
-    #cboxTopLeft{width:21px; height:21px; background:url(controls.png) no-repeat -101px 0;}
-    #cboxTopRight{width:21px; height:21px; background:url(controls.png) no-repeat -130px 0;}
-    #cboxBottomLeft{width:21px; height:21px; background:url(controls.png) no-repeat -101px -29px;}
-    #cboxBottomRight{width:21px; height:21px; background:url(controls.png) no-repeat -130px -29px;}
-    #cboxMiddleLeft{width:21px; background:url(controls.png) left top repeat-y;}
-    #cboxMiddleRight{width:21px; background:url(controls.png) right top repeat-y;}
-    #cboxTopCenter{height:21px; background:url(border.png) 0 0 repeat-x;}
-    #cboxBottomCenter{height:21px; background:url(border.png) 0 -29px repeat-x;}
-    #cboxContent{background:#fff; overflow:hidden;}
-        .cboxIframe{background:#fff;}
-        #cboxError{padding:50px; border:1px solid #ccc;}
-        #cboxLoadedContent{margin-bottom:28px;}
-        #cboxTitle{position:absolute; bottom:4px; left:0; text-align:center; width:100%; color:#949494;}
-        #cboxCurrent{position:absolute; bottom:4px; left:58px; color:#949494;}
-        #cboxSlideshow{position:absolute; bottom:4px; right:30px; color:#0092ef;}
-        #cboxPrevious{position:absolute; bottom:0; left:0; background:url(controls.png) no-repeat -75px 0; width:25px; height:25px; text-indent:-9999px;}
-        #cboxPrevious:hover{background-position:-75px -25px;}
-        #cboxNext{position:absolute; bottom:0; left:27px; background:url(controls.png) no-repeat -50px 0; width:25px; height:25px; text-indent:-9999px;}
-        #cboxNext:hover{background-position:-50px -25px;}
-        #cboxLoadingOverlay{background:url(loading_background.png) no-repeat center center;}
-        #cboxLoadingGraphic{background:url(loading.gif) no-repeat center center;}
-        #cboxClose{position:absolute; bottom:0; right:0; background:url(controls.png) no-repeat -25px 0; width:25px; height:25px; text-indent:-9999px;}
-        #cboxClose:hover{background-position:-25px -25px;}
-
-/*
-  The following fixes a problem where IE7 and IE8 replace a PNG's alpha transparency with a black fill
-  when an alpha filter (opacity change) is set on the element or ancestor element.  This style is not applied to or needed in IE9.
-  See: http://jacklmoore.com/notes/ie-transparency-problems/
-*/
-.cboxIE #cboxTopLeft,
-.cboxIE #cboxTopCenter,
-.cboxIE #cboxTopRight,
-.cboxIE #cboxBottomLeft,
-.cboxIE #cboxBottomCenter,
-.cboxIE #cboxBottomRight,
-.cboxIE #cboxMiddleLeft,
-.cboxIE #cboxMiddleRight {
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00FFFFFF,endColorstr=#00FFFFFF);
+/* fontawesome */
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif;
+}
+section.imagenes {
+  position: relative;
+  margin: auto;
+  width: 80%;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+  min-height: 80%;
+  max-height: 80%;
+  top: 10%;
+  display: block;
+  font-family: 'Open Sans', sans-serif;
+  padding: 10px 10px;
+  z-index: 9999;
+}
+div.photo img {
+  width: 210px;
+  height: 200px;
+  margin: auto;
+  padding: 0;
+  position: relative;
+  margin-right: 10px;
+  border: 2px solid rgba(57, 122, 171, 0.44);
+  border-radius: 7px;
+  top: 20%;
+  overflow: hidden;
 }
 
-/*
-  The following provides PNG transparency support for IE6
-  Feel free to remove this and the /ie6/ directory if you have dropped IE6 support.
-*/
-.cboxIE6 #cboxTopLeft{background:url(ie6/borderTopLeft.png);}
-.cboxIE6 #cboxTopCenter{background:url(ie6/borderTopCenter.png);}
-.cboxIE6 #cboxTopRight{background:url(ie6/borderTopRight.png);}
-.cboxIE6 #cboxBottomLeft{background:url(ie6/borderBottomLeft.png);}
-.cboxIE6 #cboxBottomCenter{background:url(ie6/borderBottomCenter.png);}
-.cboxIE6 #cboxBottomRight{background:url(ie6/borderBottomRight.png);}
-.cboxIE6 #cboxMiddleLeft{background:url(ie6/borderMiddleLeft.png);}
-.cboxIE6 #cboxMiddleRight{background:url(ie6/borderMiddleRight.png);}
+section ul {
+  position: relative;
+  margin-top: 2%;
+}
+section li {
+  list-style-type: none;
+  display: inline-block;
+  position: relative;
+}
+span {
+  opacity: 0;
+  position: absolute;
+  z-index: 2;
+  margin: auto;
+  -webkit-transition: opacity 0.2s;
+  background-color: rgba(31, 31, 31, 0.5);
+  width: 95%;
+  height: 90%;
+  border-radius: 7px;
+}
+span p {
+  padding:0;
+  position: relative;
+  text-align: center;
+  top: 0%;
+  font-size: 1.3em;
+  margin-left: -80px;
+  -webkit-transition: margin 0.2s;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  cursor: pointer;
+}
+span i {
+  padding:0;
+  margin:auto;
+  position:absolute;
+  text-align: center;
+  top: 85%;
+  left: 5%;
+  font-size: 0.8em;
+  margin-top: 50px;
+  -webkit-transition: margin 0.4s;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+  cursor:pointer;
+}
+span a {
+  padding:0;
+  margin:auto;
+  position:absolute;
+  text-align: center;
+  top: 85%;
+  left: 80%;
+  font-size: 0.8em;
+  margin-top: 50px;
+  -webkit-transition: margin 0.4s;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+  cursor: pointer;
+}
+div.photo:hover span  {
+  opacity:1;
+}
+div.photo:hover p {
+    margin-left: 0px;
+}
+div.photo:hover i {
+  margin-top: 0px;
+}
+div.photo:hover a {
+  margin-top: 0px;
+}
+i:hover {
+  color:pink;
+}
+a:hover {
+  color: #9AFBFF;
+}
+/* Btn */
+fieldset {
+  border: transparent;
+  box-shadow: 0.2px 0.2px 0.2px greY;
+  margin: 10px;
+  position: relative;
+}
+ul.btn {
+  position: relative;
+  display: inline;
+  list-style-type: none;
+  text-decoration: none;
+}
+ul.btn li button.all {
+  padding: 10px 10px 10px 10px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 200;
+  border-radius: 7px;
+  border: 1px solid transparent;
+  background:#33cccc;
+  color: white;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+  outline: none;
+  cursor: pointer;
+  transition: all .3s ease-in;
+}
+ul.btn li button.all:hover {
+  color: #33cccc;
+  background: #fff;
+}
+ul.btn li select {
+  border: 1px solid transparent;
+  padding: 10px 10px 10px 10px;
+  font-family: 'Open Sans', sans-serif;
+  transition: all .3s ease-in-out;
+  outline-color: white;
+  background:#33cccc;
+  color: white;
+  border-radius: 7px;
+}
+ul.btn li select:hover {
+  color: #33cccc;
+  background: white;
+}
 
-.cboxIE6 #cboxTopLeft,
-.cboxIE6 #cboxTopCenter,
-.cboxIE6 #cboxTopRight,
-.cboxIE6 #cboxBottomLeft,
-.cboxIE6 #cboxBottomCenter,
-.cboxIE6 #cboxBottomRight,
-.cboxIE6 #cboxMiddleLeft,
-.cboxIE6 #cboxMiddleRight {
-    _behavior: expression(this.src = this.src ? this.src : this.currentStyle.backgroundImage.split('"')[1], this.style.background = "none", this.style.filter = "progid:DXImageTransform.Microsoft.AlphaImageLoader(src=" + this.src + ", sizingMethod='scale')");
+ul.layout {
+  position: relative;
+  float: right;
+  margin: auto;
+}
+button.fontawesome-reorder , button.fontawesome-table {
+  padding: 10px 10px 10px 10px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 200;
+  border-radius: 7px;
+  border: 1px solid transparent;
+  background:#33cccc;
+  color: white;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+  outline: none;
+  cursor: pointer;
+  margin-top: 5%;
+  cursor: pointer;
+  transition: all .3s ease-in;
+}
+ul.layout li button:hover {
+  color: #33cccc;
+  background: white;
 }
