--- a/skyfolk/static/css/colorbox.css
+++ b/skyfolk/static/css/colorbox.css
@@ -13,7 +13,7 @@ section.imagenes {
   min-height: 80%;
   max-height: 80%;
   top: 10%;
-  display: block;
+  display: none;
   font-family: 'Open Sans', sans-serif;
   padding: 10px 10px;
   z-index: 9999;
