--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -416,9 +416,56 @@
 <!-- This contains the hidden content for inline calls -->
 <div style='display:none'>
       <div id='inline_content' style='padding:10px; background:#fff;'>
-        <p><strong><form action="" method="get">
-              <span><img src="{{STATIC_URL}}img/2.jpg"></span>
-              </form></strong></p>
+        <section>
+  <fieldset class="controls">
+  <ul class="btn">
+    <li><button class="all">Todas</button></li>
+    <li><select>
+      <option value"choose" selected="selected">Choose...</option>
+      <option value="rec">Recientes</option>
+      <option value="+">Mas Likes</option>
+      <option value="+m">Mas comentadas</option></select></li>
+    <li><select>
+      <option value"choose" selected="selected">Year...</option>
+      <option value="rec">2015</option>
+      <option value="+">2016</option>
+      <option value="+m">2017</option></select></li>
+  </ul>
+  <ul class="layout">
+    <li><button class="fontawesome-reorder"></button></li>
+    <li><button class="fontawesome-table"></button></li>
+</ul>
+  <ul>
+    </fieldset>
+    <li><div class="photo">
+      <span class="text">
+        <p href="#">Vacaciones en Tenerife.</p>
+        <i class="fontawesome-heart"> 1.031</i>
+        <a class="fontawesome-comment"> 432</a>
+      </span><img src="http://media1.onsugar.com/files/2014/04/09/296/n/28443503/addcb937ebb4186e_shutterstock_124808911.xxxlarge/i/Best-Ways-Stick-Your-Diet.jpg" alt="Photo">
+   </div></li>
+  <li><div class="photo"><span class="text">
+        <p>Vacaciones en Tenerife.</p>
+        <i class="fontawesome-heart"> 1.031</i>
+        <a class="fontawesome-comment"> 432</a>
+      </span></span><img src="http://www.anvari.org/db/cols/Best_Journalism_Photos/Best_Photo_6.jpg" alt"Photo"></div></li>
+    <li><div class="photo"><span class="text">
+        <p href="#">Vacaciones en Tenerife.</p>
+        <i class="fontawesome-heart"> 1.031</i>
+        <a class="fontawesome-comment"> 432</a>
+      </span><img src="http://www.anvari.org/db/cols/Best_Journalism_Photos/Best_Photo_6.jpg" alt"Photo"></div></li>
+    <li><div class="photo"><span class="text">
+        <p href="#">Vacaciones en Tenerife.</p>
+        <i class="fontawesome-heart"> 1.031</i>
+        <a class="fontawesome-comment"> 432</a>
+      </span><img src="http://www.anvari.org/db/cols/Best_Journalism_Photos/Best_Photo_6.jpg" alt"Photo"></div></li>
+    <li><div class="photo"><span class="text">
+        <p href="#">Vacaciones en Tenerife.</p>
+        <i class="fontawesome-heart"> 1.031</i>
+        <a class="fontawesome-comment"> 432</a>
+      </span><img src="http://www.wellhappypeaceful.com/wp-content/uploads/2011/12/Dog-Cat-Best-Friend.jpg" alt"Photo"></div></li>
+  </ul>
+</section>
       
       </div>
 </div>
