--- a/skyfolk/static/css/colorbox.css
+++ b/skyfolk/static/css/colorbox.css
@@ -84,3 +84,185 @@
 .cboxIE6 #cboxMiddleRight {
     _behavior: expression(this.src = this.src ? this.src : this.currentStyle.backgroundImage.split('"')[1], this.style.background = "none", this.style.filter = "progid:DXImageTransform.Microsoft.AlphaImageLoader(src=" + this.src + ", sizingMethod='scale')");
 }
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+
+/* fontawesome */
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif;
+}
+section {
+  position: relative;
+  margin: auto;
+  width: 80%;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+  min-height: 80%;
+  max-height: 80%;
+  top: 10%;
+  display: block;
+  font-family: 'Open Sans', sans-serif;
+  padding: 10px 10px;
+  z-index: 9999;
+}
+div.photo img {
+  width: 210px;
+  height: 200px;
+  margin: auto;
+  padding: 0;
+  position: relative;
+  margin-right: 10px;
+  border: 2px solid rgba(57, 122, 171, 0.44);
+  border-radius: 7px;
+  top: 20%;
+  overflow: hidden;
+}
+
+section ul {
+  position: relative;
+  margin-top: 2%;
+}
+section li {
+  list-style-type: none;
+  display: inline-block;
+  position: relative;
+}
+span {
+  opacity: 0;
+  position: absolute;
+  z-index: 2;
+  margin: auto;
+  -webkit-transition: opacity 0.2s;
+  background-color: rgba(31, 31, 31, 0.5);
+  width: 95%;
+  height: 90%;
+  border-radius: 7px;
+}
+span p {
+  padding:0;
+  position: relative;
+  text-align: center;
+  top: 0%;
+  font-size: 1.3em;
+  margin-left: -80px;
+  -webkit-transition: margin 0.2s;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  cursor: pointer;
+}
+span i {
+  padding:0;
+  margin:auto;
+  position:absolute;
+  text-align: center;
+  top: 85%;
+  left: 5%;
+  font-size: 0.8em;
+  margin-top: 50px;
+  -webkit-transition: margin 0.4s;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+  cursor:pointer;
+}
+span a {
+  padding:0;
+  margin:auto;
+  position:absolute;
+  text-align: center;
+  top: 85%;
+  left: 80%;
+  font-size: 0.8em;
+  margin-top: 50px;
+  -webkit-transition: margin 0.4s;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+  cursor: pointer;
+}
+div.photo:hover span  {
+  opacity:1;
+}
+div.photo:hover p {
+    margin-left: 0px;
+}
+div.photo:hover i {
+  margin-top: 0px;
+}
+div.photo:hover a {
+  margin-top: 0px;
+}
+i:hover {
+  color:pink;
+}
+a:hover {
+  color: #9AFBFF;
+}
+/* Btn */
+fieldset {
+  border: transparent;
+  box-shadow: 0.2px 0.2px 0.2px greY;
+  margin: 10px;
+  position: relative;
+}
+ul.btn {
+  position: relative;
+  display: inline;
+  list-style-type: none;
+  text-decoration: none;
+}
+ul.btn li button.all {
+  padding: 10px 10px 10px 10px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 200;
+  border-radius: 7px;
+  border: 1px solid transparent;
+  background:#33cccc;
+  color: white;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+  outline: none;
+  cursor: pointer;
+  transition: all .3s ease-in;
+}
+ul.btn li button.all:hover {
+  color: #33cccc;
+  background: #fff;
+}
+ul.btn li select {
+  border: 1px solid transparent;
+  padding: 10px 10px 10px 10px;
+  font-family: 'Open Sans', sans-serif;
+  transition: all .3s ease-in-out;
+  outline-color: white;
+  background:#33cccc;
+  color: white;
+  border-radius: 7px;
+}
+ul.btn li select:hover {
+  color: #33cccc;
+  background: white;
+}
+
+ul.layout {
+  position: relative;
+  float: right;
+  margin: auto;
+}
+button.fontawesome-reorder , button.fontawesome-table {
+  padding: 10px 10px 10px 10px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 200;
+  border-radius: 7px;
+  border: 1px solid transparent;
+  background:#33cccc;
+  color: white;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+  outline: none;
+  cursor: pointer;
+  margin-top: 5%;
+  cursor: pointer;
+  transition: all .3s ease-in;
+}
+ul.layout li button:hover {
+  color: #33cccc;
+  background: white;
+}
