--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Kite+One);
 @import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 @import url(http://weloveiconfonts.com/api/?family=fontawesome);
@@ -1675,3 +1676,99 @@ div.infx:hover {
   opacity: 1;
   transition: all 1s ease-in-out;
   }
+
+  /* Notificación me gusta */
+div.love {
+  position: relative;
+  min-width: 400px;
+  max-width: 420px;
+  min-height: 120px;
+  max-height: 127px;
+  background-color: tomato;
+  font-family: 'Open Sans', sans-serif;
+  border-radius: 7px;
+  display: block;
+}
+h4 {
+  position: relative;
+  margin: 10px; 
+  text-align: center;
+  color: grey;
+}
+a {
+  color: white;
+  text-decoration: none;
+  font-style: normal;
+  transition: all .3s ease-in-out;
+}
+a:hover {
+  color: grey;
+}
+span {
+  text-align: center;
+}
+p {
+  font-size: 15px;
+  position: relative;
+  color: white;
+  float: right;
+  height: auto;
+  margin: auto;
+  margin-top: 20px;
+  padding: 0px 10px;
+  display: inline-block;
+}
+i {
+  text-decoration: none;
+  font-style: normal;
+  position: relative;
+  left:7%;
+  font-size: 40px;
+  padding: 10px 10px;
+  margin: auto;
+  display: inline-block;
+  color: white;
+  transition: all .2s ease-in-out;
+}
+i:hover, i:focus, i:active {
+  -webkit-animation-name: pulse;
+  animation-name: pulse;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  color: rgba(244, 49, 126, 0.9);
+  cursor: pointer;
+}
+@-webkit-keyframes pulse {
+  25% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  75% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+
+@keyframes pulse {
+  25% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  75% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+a.fontawesome-remove {
+  position: absolute;
+  margin: auto;
+  left: 95%;
+  top: 2%;
+  cursor: pointer;
+}
