--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -54,7 +54,7 @@
 
 <div class="love">
   <h4> Has recibido un <a>Me gusta.</a> </h4>
-  <a class="fontawesome-remove"></a>
+  <a target="X" class="fontawesome-remove"></a>
   <span><i class="fontawesome-heart"></i><p><a href="#">Homer Simpson</a> le gusta un mensaje tuyo.</p></span>
 </div>
 <!-- Fin notificaciones -->
