--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -52,9 +52,9 @@
   <button class="Mensaje-close js-messageClose"><i class="fa fa-times"></i></button>
 </div>
 <div class="love">
-  <h4> Has recibido un <a>Me gusta.</a> </h4>
+  <h4> Has recibido un <a target="x">Me gusta.</a> </h4>
   <a target="X" class="fontawesome-remove"></a>
-  <span><i class="fontawesome-heart"></i><p><a href="#">Homer Simpson</a> le gusta un mensaje tuyo.</p></span>
+  <span><i class="fontawesome-heart"></i><p><a target="x" href="#">Homer Simpson</a> le gusta un mensaje tuyo.</p></span>
 </div>
 <!-- Fin notificaciones -->
 <div id="nav2">
