--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -41,7 +41,8 @@
   </div>
 </div>
 <!-- Notificaciones -->
- <div class="Mensaje" id="js-timer">
+<ul class="notificaciones">
+ <li><div class="Mensaje" id="js-timer">
   <div class="Mensaje-icon">
     <i class="fa fa-bell-o"></i>
   </div>
@@ -50,12 +51,12 @@
     <p class="u-italic">Acabas de entrar a Skyfolk satisfactoriamente.</p>
   </div>
   <button class="Mensaje-close js-messageClose"><i class="fa fa-times"></i></button>
-</div>
-<div class="love">
-  <h4> Has recibido un <a target="x">Me gusta.</a> </h4>
-  <a target="X" class="fontawesome-remove"></a>
-  <span><i class="fontawesome-heart"></i><p><a target="x" href="#">Homer Simpson</a> le gusta un mensaje tuyo.</p></span>
-</div>
+</div></li>
+<li><div class="love">
+  <h4> Has recibido un <a>Me gusta.</a> </h4>
+  <a class="fontawesome-remove"></a>
+  <span><i class="fontawesome-heart"></i><p><a href="#">Homer Simpson</a> le gusta un mensaje tuyo.</p></span>
+</div><li></ul>
 <!-- Fin notificaciones -->
 <div id="nav2">
 <ul class="nameact">   
