--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1678,6 +1678,10 @@ div.infx:hover {
   }
 
   /* Notificación me gusta */
+ul.notificaciones {
+  list-style-type: none;
+  
+}
 div.love {
   position: absolute;
   min-width: 400px;
@@ -1696,13 +1700,13 @@ div.love h4 {
   text-align: center;
   color: grey;
 }
-div.love a[target="x"] {
+div.love a {
   color: white;
   text-decoration: none;
   font-style: normal;
   transition: all .3s ease-in-out;
 }
-div.love a[target="x"]:hover {
+div.love a:hover {
   color: grey;
 }
 div.love span {
@@ -1766,7 +1770,7 @@ div.love i:hover, i:focus, i:active {
     transform: scale(0.9);
   }
 }
-div.love a[target="x"] {
+div.love a {
   position: absolute;
   margin: auto;
   left: 95%;
