--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -41,8 +41,7 @@
   </div>
 </div>
 <!-- Notificaciones -->
-<ul class="notificaciones">
- <li><div class="Mensaje" id="js-timer">
+ <div class="Mensaje" id="js-timer">
   <div class="Mensaje-icon">
     <i class="fa fa-bell-o"></i>
   </div>
@@ -51,12 +50,13 @@
     <p class="u-italic">Acabas de entrar a Skyfolk satisfactoriamente.</p>
   </div>
   <button class="Mensaje-close js-messageClose"><i class="fa fa-times"></i></button>
-</div></li>
-<li><div class="love">
+</div>
+
+<div class="love">
   <h4> Has recibido un <a>Me gusta.</a> </h4>
   <a class="fontawesome-remove"></a>
   <span><i class="fontawesome-heart"></i><p><a href="#">Homer Simpson</a> le gusta un mensaje tuyo.</p></span>
-</div><li></ul>
+</div>
 <!-- Fin notificaciones -->
 <div id="nav2">
 <ul class="nameact">   
