--- a/skyfolk/static/css/colorbox.css
+++ b/skyfolk/static/css/colorbox.css
@@ -94,8 +94,8 @@
 section {
   position: relative;
   margin: auto;
-  width: 80%;
-  border: 3px solid rgba(0, 0, 0, 0.2);
+  width: 90%;
+  border: 1px solid transparent;
   min-height: 80%;
   max-height: 80%;
   top: 10%;
