--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -100,7 +100,15 @@
             </ul></nav>
       </div>
 <!-- Fin de conf rápida -->
+<div id="notifi">
+<div class="love">
+  <h4> Has recibido un <a>Me gusta.</a> </h4>
+  <a class="fontawesome-remove"></a>
+  <span><i class="fontawesome-heart"></i><p><a href="#">Homer Simpson</a> le gusta un mensaje tuyo.</p></span>
+</div>
+</div>
 <div class="container">
+
   
   <div class="col-lg-8 col-md-6 col-sm-12">
 
