--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -100,6 +100,7 @@
             </ul></nav>
       </div>
 <!-- Fin de conf rápida -->
+<!-- Notificacion me gusta -->
 <div id="notifi">
 <div class="love">
   <h4> Has recibido un <a>Me gusta.</a> </h4>
@@ -107,6 +108,7 @@
   <span><i class="fontawesome-heart"></i><p><a href="#">Homer Simpson</a> le gusta un mensaje tuyo.</p></span>
 </div>
 </div>
+<!-- Fin notificacion me gusta -->
 <div class="container">
 
   
