--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1549,11 +1549,14 @@ button:hover {
   line-height: 1;
   transition: all .3s ease-in-out;
   outline: none;
+   -webkit-transition: margin 0.2s;
 
   }
   #Menu:hover {
     border: 2px solid #33F0DD;
-    -webkit-transform: scale(20);
+    -webkit-transform: scale(10);
+    margin-left: 100px;
+
   }
 
   #centro {
