--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1555,7 +1555,8 @@ button:hover {
   #Menu:hover {
     border: 2px solid #33F0DD;
     -webkit-transform: scale(10);
-    margin-left: 100px;
+    margin-left: 200px;
+    margin-top: 200px;
 
   }
 
