--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1004,7 +1004,8 @@ font-family: 'Andika', sans-serif;
   margin: 0;
   padding: 0;
   list-style: none;
-  overflow: scroll; }
+  overflow-y: scroll;
+  overflow-x:hidden; }
 
 ul.table > li {
   display: table-cell; }
