--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -24,7 +24,7 @@
 
 {% block content %}
 
-<div id="panel" style="display:none;"> 
+<div id="panel"> 
 
   <div id="widget" onClick="cambiopagina()"> 
 <!--
