--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -342,6 +342,23 @@
     </p>
   </article>
   </div>
+  <div class="wrapper">
+  <div id="box">
+        <input id="profile" type="checkbox" checked> 
+        <label class="popo" for="profile">
+        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
+        </label>
+        <span class="entypo-thumbs-up" title="¡Me gusta!"></span> 
+        <span class="entypo-forward" title="Responder"></span>
+    <span class="entypo-plus" title="Añadir a..."></span>
+  </div>
+  <article class="articulo">
+    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
+    <p class="parrafo">
+      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
+    </p>
+  </article>
+  </div>
                            <div class="wrapper">
 
   <div id="box">
