--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -621,3 +621,199 @@ margin-top: 20px;
 
 
 }
+/* Fieldset */
+fieldset {
+  border: none;
+  font-family: 'Open Sans', sans-serif;
+}
+button.fontawesome-plus {
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  width: 50px;
+  height: 50px;
+  float: right;
+  position: relative;
+  cursor: pointer;
+  font-size: 15px;
+  transition: all .3s ease-in;
+}
+button.fontawesome-plus:hover {
+  background-color: #71bdf4;
+  color: white;
+  -webkit-transform: scale(1.1);
+}
+
+button.all {
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  width: 50px;
+  height: 50px;
+  float: left;
+  position: relative;
+  cursor: pointer;
+  transition: all .1s ease-in;
+  font-size: 15px;
+  font-family: 'Open Sans', sans-serif;
+}
+button.all:active {
+  color: white;
+  background-color: #71bdf4;
+}
+button.all:focus {
+  background-color: #71bdf4;
+  color: white;
+}
+select {
+  border: none;
+  outline: none;
+  width: 100px;
+  height: 50px;
+  float: left;
+  position: relative;
+  cursor: pointer;
+  transition: all .1s ease-in;
+  left: 2%;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  text-align: center;
+  background-color: rgba(242, 232, 255, 0.4);
+  color: black;
+  margin-left: 10px;
+}
+/* section */
+
+#section {
+  background-color: white;
+  box-shadow: 0.7px 0.5px grey;
+  border-radius: 10px;
+  position: absolute;
+  z-index: 7;
+  width: 40%;
+  min-height: 75%;
+  max-height: 75%;
+  margin: auto;
+  left: 30%;
+  font-family: 'open sans', sans-serif;
+
+}
+span.fontawesome-remove {
+  position: absolute;
+  float: right;
+  left: 95%;
+  font-size: 1.2em;
+  color: tomato;
+  cursor: pointer;
+}
+section img.group {
+  width: 120px;
+  height: 120px;
+  border: 1px solid rgba(215, 231, 230, 0.6);;
+  position: relative;
+  margin: auto;
+  padding: 0;
+  display: inline-block;
+  left: 40%;
+  margin-top: 20px;
+}
+section ul {
+  position: relative;
+  list-style-type: none;
+  margin: auto;
+  text-align: center;
+  top: 10%;
+
+}
+section ul li {
+  margin-top: 20px;
+  outline: none;
+}
+section ul li select {
+  position: relative;
+  margin-top: 37%;
+  padding: 0;
+
+}
+input[type="search"] {
+  position: absolute;
+  margin-top: 37%;
+  padding: 2px 2px;
+  background: url('http://www.endlessicons.com/wp-content/uploads/2012/12/search-icon-614x460.png');
+  background-size: 37px;
+  background-repeat: no-repeat;
+  background-position: left;
+  border-radius: 20px;
+  text-align: center;
+  outline: none;
+  transition: all .3s ease-in;
+}
+input[type="search"]:focus {
+  border: 2px solid tomato;
+}
+input[target="local"] { 
+  outline: none;
+  border: none;
+  border-bottom: 2px solid aquamarine;
+  text-align: center;
+  background: url('http://uxrepo.com/static/icon-sets/font-awesome/svg/location.svg');
+  background-size: 15px;
+  background-repeat: no-repeat;
+  padding: 5px -10px;
+  opacity: 0.7;
+  color: grey;
+}
+input[target="group"] {
+  background: url('http://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Group_font_awesome.svg/512px-Group_font_awesome.svg.png');
+  background-size: 15px;
+  background-repeat: no-repeat;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid aquamarine;
+  text-align: center;
+  padding: 5px -10px;
+  opacity: 0.7;
+  color: grey;
+
+}
+input[target="group"]:focus, input[target="local"]:focus{
+  opacity: 0.6;
+  border-bottom: 2px solid tomato;
+
+}
+div.contactos {
+  position: relative;
+  min-width: 65%;
+  max-width: 100%;
+  height: 170px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  right: 14%;
+  box-shadow: 1px 1px  rgba(0, 0, 0, 0.3);;
+}
+div.contactos img {
+  width: 60px;
+  height: 60px;
+}
+div.contactos ul.cont {
+  display: inline;
+  text-align: center;
+  float: left;
+  position: relative;
+  margin: auto;
+  color: grey;
+}
+div.contactos ul.cont img {
+  border-radius: 7px;
+  margin-right: 50px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  display: inline;
+  opacity: 1;
+}
+
+div.contactos ul.cont li a {
+position: relative;
+padding: 0;
+margin: auto;
+top: -1.4em;
+}
