--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js" /></script>
   <script src="{{STATIC_URL}}js/friends.js"></script>
 </form> </header>
+<!-- CREAR NUEVO GRUPO DE AMIGOS -->
 <fieldset>
 <button class="fontawesome-plus" title="Create new group"></button>
 <button class="All" title="All">All</button>
@@ -43,6 +44,7 @@
   ></li>
 </ul>
 </section>
+<!-- FIN CREAR NUEVO GRUPO AMIGOS -->
 <div id="content_profile_cards">
 
 
