--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1019,8 +1019,8 @@ margin: 0px;
 width: 100%;
 position: fixed;
 display: block;
-box-shadow: 3px 2px 4px 3px #fff;
-background: #fff;
+box-shadow: 3px 2px 4px 3px rgb(26, 188, 156);
+background: rgb(26, 188, 156);
 opacity: 0.8;
 top: 3px;
 z-index: 9999;
