--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -7,7 +7,7 @@
 	display: flex;
 	position: absolute;
 	margin: 5em auto;
-	width: 721px;
+	width: 901px;/*70%*/
 	height: 38px;
 	top: -50px;
 	left: 7%;
@@ -40,7 +40,7 @@
   height:34px;
   margin-top:2px;
   margin-left:0px;
-  color: black;
+  color: #000;
 }
 
 .field>form button {
