--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -139,7 +139,7 @@ top.window.outerWidth = screen.availWidth;
   		<div id ="box-tool">
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
-	  		<a class="fontawesome-random" href="aleatorio.html"</a>
+	  		<a class="fontawesome-link" href="#mislazos"</a>
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
 
 	  		<div class="notifications">
