--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -450,28 +450,27 @@ span[class*="thumbs-up"]:hover {
 	float:right;
     margin-top: 9.5px;
 }
-.fontawesome-random {
-  color:##00FFFF;
+.fontawesome-link {
+  color:#FFF;
   cursor:pointer;
   margin-top: 15px;
   text-align:center;
   font-size:31px;
   padding:0px;
   margin-left:15px;
-  text-shadow:1px 1px 1px rgba(225,225,225,0.5);
   opacity: 1;
   transition: all .3s ease-in-out;
 }
-.fontawesome-random:hover {
+.fontawesome-link:hover {
   opacity: 1;
-  color: rgb(26, 188, 156);
+  color: #000;
   border: 3px solid rgb(26, 188, 156);
   border-right: none;
   border-top: none;
   border-left: none;
 }
 .fontawesome-comment-alt {
-color: ##00FFFF;
+color: #FFF;
 cursor:pointer;
 margin-top: 3px;
 text-align: center;
@@ -482,12 +481,11 @@ font-size: 31px;
 padding: 0px;
 /*float: right;*/
 margin-left:15px;
-text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
 opacity: 1;
 transition: all .3s ease-in-out;
 }
 .fontawesome-comment-alt:hover {
-color: rgb(26, 188, 156);
+color: black;
 opacity:1;
  border: 3px solid rgb(26, 188, 156);
  border-right: none;
@@ -495,7 +493,7 @@ opacity:1;
  border-left: none;
 }
 .fontawesome-th {
-color:##00FFFF;
+color:#FFF;
 cursor:pointer;
 margin-top: 3px;
 text-align: center;
@@ -506,12 +504,11 @@ font-size: 31px;
 padding: 0px;
 /*float: right;*/
 margin-left:15px;
-text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
 opacity:1;
 transition: all .3s ease-in-out;
 }
 .fontawesome-th:hover {
-color: rgb(26, 188, 156);
+color: black;
 opacity: 1;
  border: 3px solid rgb(26, 188, 156);
  border-right: none;
@@ -519,7 +516,7 @@ opacity: 1;
  border-left: none;
 }
 .fontawesome-cog{
-color: ##00FFFF;
+color: #FFF;
 margin-top: 3px;
 cursor:pointer;
 text-align: center;
@@ -530,7 +527,6 @@ font-size: 31px;
 padding: 0px;
 /*float: right;*/
 margin-left:15px;
-text-shadow: 1px 1px 1px rgba(255,255,255,0.5); 
 opacity: 1;
 transition: all .3s ease-in-out;
 }
@@ -547,12 +543,10 @@ transition: all .3s ease-in-out;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  color: rgb(26, 188, 156);
+  color: black;
   opacity: 1;
 }
-.fontawesome-cog:hover, .fontawesome-cog:focus, .fontawesome-cog:active {
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
-}
+
 .fontawesome-th {
   display: inline-block;
   -webkit-transition-duration: 0.3s;
@@ -561,11 +555,8 @@ transition: all .3s ease-in-out;
   transition-property: box-shadow;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 }
-.fontawesome-th:hover, .fontawesome-th:focus, .fontawesome-th:active {
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
-}
+
   .fontawesome-comment-alt {
   display: inline-block;
   -webkit-transition-duration: 0.3s;
@@ -574,10 +565,5 @@ transition: all .3s ease-in-out;
   transition-property: box-shadow;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 }
-.fontawesome-comment-alt:hover, .fontawesome-comment-alt:focus, .fontawesome-comment-alt:active {
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
-}
-
 
