--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1433,7 +1433,7 @@ button:hover {
 
 
 .fontawesome-bell {
-  color: ##00FFFF;
+  color: #FFF;
   cursor:pointer;
   text-align:center;
   font-size: 31px;
@@ -1441,11 +1441,10 @@ button:hover {
   display: block;
   position:absolute;
   margin-left:-33px;
-  text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
 }
 
 .fontawesome-bell:hover {
-  color: rgb(26, 188, 156);
+  color: black;
   border: 3px solid rgb(26, 188, 156);
   border-right: none;
   border-top: none;
