--- a/Plantillas sin usar/mibaul/baul.css
+++ b/Plantillas sin usar/mibaul/baul.css
@@ -9,11 +9,11 @@
 
 body {
 	min-width: 980px;
-	max-width: 990px;
+	max-width: 1000px;
 	height: auto;
 	margin: auto;
 	font-family: 'Open Sans', sans-serif;
-background: rgba(0, 0, 0, 0.1);
+    background: #fff;
 }
 fieldset {
 	position: absolute;
@@ -21,7 +21,7 @@ fieldset {
 	border-bottom: 2px solid rgba(26, 188, 156, 0.7);
 	padding: 5px 5px;
 	height: auto;
-	width: 70%;
+	width: 50%;
 }
 meter::-webkit-meter-bar {
   position:relative;
@@ -80,7 +80,7 @@ ul.option li button {
 	outline: none;
 	padding: 10px 10px;
 	font-size: 25px;
-	background: #fff;
+	background: transparent;
 	border-radius: 20px;
 	box-shadow: 0.5px 0.5px #fff;
 	color: aquamarine;
@@ -97,7 +97,7 @@ ul.option li button:hover {
 section{
 	background: #fff;
 	width: 100%;
-	height: 80%;
+	height: auto;
 	margin: auto;
 	top:20%;
 	position: relative;
@@ -203,7 +203,7 @@ span.fontawesome-share {
 	left: 90%;
 	transition: all .3s ease-in;
 }
-	span.fontawesome-share:hover {
+span.fontawesome-share:hover {
 	position: absolute;
 	margin: auto;
 	display: inline;
@@ -224,6 +224,9 @@ span.fontawesome-share {
     	width: 100%;
     	height: 80%;
     }
+    fieldset {
+    	width: 70%;
+    }
 }
 @media screen and (max-width: 650px) {
    body {
@@ -233,9 +236,12 @@ span.fontawesome-share {
    	width: 680px;
    	height: auto;
    }
+   fieldset {
+   	width: 70%;
+   }
 }
 @media screen and (max-width: 480px) {
   body {
-  	width: 500px;
+  	width: 800px;
   }
 }
