--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -69,7 +69,12 @@
 	{% endblock %}
     </head>
     <body>
-       
+       	<form class="form-2">
+		<ul class="mis_cuentas">
+			<li><img src="http://cdn.pijamasurf.com/wp-content/uploads/2013/07/heisenberg.jpg"><p>Werner Heisenberg.<span class="entypo-right-open"></span></p></li>
+			<li><img src="http://1.bp.blogspot.com/_bdpS0cigi4c/SwTLeOWqbqI/AAAAAAAAAEk/pVIiTew7Wvw/s1600/random+dude.bmp"><p>Random dude.<span class="entypo-right-open"></span></p></li>
+		</ul>
+	</form>
        <!--<div id="texto"><img class="logo" src="{{STATIC_URL}}img/logo.png"><h2>S<span>kyfolk.</span></h2>-->
 	<div id="texto"><h2>S<span>kyfolk.</span></h2>
        	</div>
