--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -69,7 +69,7 @@
 	{% endblock %}
     </head>
     <body>
-    	<a class="entypo-plus"></p>
+    	<a class="entypo-plus"></a>
        	<form class="form-2">
 		<ul class="mis_cuentas">
 			<li><img src="http://cdn.pijamasurf.com/wp-content/uploads/2013/07/heisenberg.jpg"><p>Werner Heisenberg.<span class="entypo-right-open"></span></p></li>
