--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -345,7 +345,7 @@
           <ul class="unstyled table fullwidth links">
             <li class="active"><a>Popular</a></li>
             <li class="comentarios"><a>Comentarios</a></li>
-            <li class="active"><a>Recientes</a></li>
+            <li class="active"><a>Amigos</a></li>
           </ul>
           <ul class="unstyled content">
             <div class="wrapper">
